# zed

./: BRAINLIFT_DOCUMENTATION.md  Cargo.toml  README_PROJECT.md  requirements.md
crates/graph_view/: Cargo.toml
crates/graph_view/src/: graph_view.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
